🚿 Clean up: code

--- a/study-webmvc/src/main/resources/templates/events.html
+++ b/study-webmvc/src/main/resources/templates/events.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Event List</h1>
+<h1>Event Lists</h1>
 <ol>
     <li th:each="event: ${events}">
         <p th:text="${event.id}"></p>
